--- a/mba-chaiwala/package.json
+++ b/mba-chaiwala/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:/ShahbazKhan750.github.io/MBAChaiWalaClone",
+  "homepage": "https:/ShahbazKhan750.github.io/mba-chaiwala/public/index.html",
   "name": "mba-chaiwala",
   "version": "0.1.0",
   "private": true,
